[package]
name = "falling-sand"
version = "0.1.0"
authors = ["lonevox <quinn.epicness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
derive_more = "0.99.14"
palette = "0.5.0"
lazy_static = "1.4.0"